force-app/main/default/objects/Segment_Loader__c/Segment_Loader__c.object-meta.xml
<CustomObject>
    <label>Segment Loader</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Segment Loader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Loaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>