force-app/main/default/objects/Segment_Loader__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <label>NMI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>