force-app/main/default/objects/Segment_Loader__c/fields/Process_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Process_Outcome__c</fullName>
    <label>Process Outcome</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>